# zklink_sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build_bindings  build_bindings.sh  fix_cpp_header.py
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build_dart_sdk.yml  ci.yml
binding_tests/: crypto_test.go  go.mod  interface_test.go  types_test.go
bindings/crypto/: Cargo.toml
bindings/crypto/src/: crypto.udl
bindings/dart/: CHANGELOG.md  README.md  flutter_rust_bridge.yaml  pubspec.yaml
bindings/dart/android/: CMakeLists.txt  (+2 more)
bindings/dart/rust/: Cargo.toml
bindings/dart/rust/src/: api.rs  frb_generated.io.rs  frb_generated.rs
bindings/sdk/: Cargo.toml  ffi_golang.toml  uniffi-bindgen.rs  uniffi.toml
bindings/sdk/src/: convert.rs  crypto.rs  ffi.udl  lib.rs  network.rs  rpc_request_builder.rs  types.rs  zklink_tx.rs
bindings/sdk/src/type_convert/: hex_convert.rs  json_convert.rs  mod.rs  number_convert.rs  str_convert.rs  time_convert.rs
bindings/wasm/: Cargo.toml
bindings/wasm/js-example/: index.html
bindings/wasm/node-example/: README.md
bindings/wasm/src/: crypto.rs  error.rs  json_rpc_signer.rs  lib.rs  provider.rs  rpc.rs  rpc_client.rs  rpc_type_converter.rs  signer.rs  utils.rs  wallet.rs  zklink_signer.rs
bindings/wasm/src/contract_types/: auto_deleveraging.rs  contract_matching.rs  funding.rs  liquidation.rs  prices.rs  update_global_var.rs
bindings/wasm/src/tx_types/: change_pubkey.rs  forced_exit.rs  mod.rs  order_matching.rs  transfer.rs  withdraw.rs
bindings/wasm/src/tx_types/contract/: auto_deleveraging.rs  contract_matching.rs  funding.rs  liquidation.rs  mod.rs  prices.rs  update_global_var.rs
bindings/wasm/tests/: test_provider.rs  test_rpc.rs
bindings/zklink_crypto/: Cargo.toml  build.rs
bindings/zklink_crypto/src/: crypto.udl  lib.rs
common/: Cargo.toml
common/src/crypto/: error.rs  mod.rs  signature.rs  utils.rs  zklink_private_key.rs  zklink_signer.rs
crypto/: Cargo.toml  build.rs
crypto/src/: crypto.udl  ffi.udl  lib.rs
crypto/src/eth_signer/: error.rs  eth_signature.rs  json_rpc_signer.rs  mod.rs  packed_eth_signature.rs  pk_signer.rs
crypto/src/eth_signer/eip712/: eip712.rs  eip712_standard.rs  member_collector.rs  member_types.rs  mod.rs
crypto/src/zklink_signer/: error.rs  mod.rs  packed_signature.rs  pk_signer.rs  private_key.rs  pubkey_hash.rs  public_key.rs  signature.rs  utils.rs
crypto/tests/: eip712_test.rs
docs/: zklink_sdk.md
eth_signer/: Cargo.toml
eth_signer/src/: eip1271_signature.rs  error.rs  eth_signature.rs  json_rpc_signer.rs  lib.rs  packed_eth_signature.rs  pk_signer.rs  raw_tx.rs
examples/Cpp/: 1_change_pubkey.cpp  2_withdraw.cpp  3_transfer.cpp  5_order_matching.cpp
examples/Golang/: 10_update_global_var.go  1_change_pubkey.go  2_withdraw.go  3_transfer.go  4_forced_exit.go  5_full_exit.go  5_order_matching.go  6_contract_matching.go  6_deposit.go  7_auto_deleveraging.go  7_order_matching.go  8_funding.go  9_liquidation.go  change_pubkey.go  go.mod  main.go
examples/Java_Kotlin/: ChangePubKey.kt  ChangePubkey_1.java
examples/Python/: 1_change_pubkey.py  2_withdraw.py  3_transfer.py  5_order_matching.py
examples/Rust/rust_sdk_example/: Cargo.toml
interface/: Cargo.toml
interface/src/: error.rs  json_rpc_signer.rs  lib.rs  sign_auto_deleveraging.rs  sign_change_pubkey.rs  sign_contract_matching.rs  sign_forced_exit.rs  sign_funding.rs  sign_liquidation.rs  sign_order.rs  sign_order_matching.rs  sign_transfer.rs  sign_withdraw.rs  signer.rs
provider/: Cargo.toml
provider/src/: error.rs  lib.rs  network.rs  response.rs  rpc.rs  rpc_client.rs  rpc_wasm.rs  types.rs
provider/src/web_socket/: mod.rs
provider/src/web_socket/proto/: event.rs  mod.rs  request.rs  response.rs  topic.rs
provider/src/web_socket/ws_message/: mod.rs  topic.rs
provider/src/web_socket/ws_message/message/: mod.rs  request.rs  response.rs  server_msg.rs
provider/tests/: rpc_test.rs  test_rpc.rs
signer/: Cargo.toml
signer/src/: credentials.rs  error.rs  lib.rs  signer.rs
signer/src/eth_signer/: eip1271_signature.rs  error.rs  eth_signature.rs  json_rpc_signer.rs  mod.rs  packed_eth_signature.rs  pk_signer.rs  wasm_binding.rs
signer/src/eth_signer/eip712/: eip712.rs
signer/src/starknet_signer/: ecdsa_signature.rs  mod.rs
signer/src/zklink_signer/: error.rs  mod.rs  pk_signer.rs  pubkey_hash.rs  public_key.rs  signature.rs  utils.rs  wasm_binding.rs
signer/tests/: eip712_test.rs
signers/: Cargo.toml
signers/src/: lib.rs
signers/src/eth_signer/: eip1271_signature.rs  error.rs  json_rpc_signer.rs  mod.rs  packed_eth_signature.rs  pk_signer.rs
signers/src/eth_signer/eip712/: eip712.rs  mod.rs
signers/src/starknet_signer/: ecdsa_signature.rs  error.rs  mod.rs  pk_signer.rs  starknet_json_rpc_signer.rs
signers/src/starknet_signer/typed_data/: message.rs  mod.rs
signers/src/zklink_signer/: error.rs  mod.rs  pk_signer.rs  pubkey_hash.rs  public_key.rs  signature.rs  utils.rs  wasm_binding.rs
signers/tests/: eip712.json  eip712_test.rs
types/: Cargo.toml  build.rs
types/src/: error.rs  ffi.udl  l1_signature.rs  lib.rs  signatures.rs  tx_builder.rs
types/src/basic_types/: bigunit_wrapper.rs  bit_convert.rs  error.rs  float_convert.rs  macros.rs  mod.rs  num_wrapper.rs  pack.rs  pad.rs  params.rs  tx_hash.rs  zklink_address.rs
types/src/contract/: auto_deleveraging.rs  contract_matching.rs  funding.rs  liquidation.rs  mod.rs  prices.rs  update_global_var.rs
types/src/tx_type/: change_pubkey.rs  deposit.rs  error.rs  exit_info.rs  float_convert.rs  forced_exit.rs  full_exit.rs  mod.rs  order_matching.rs  pack.rs  transfer.rs  validator.rs  withdraw.rs  zklink_tx.rs
types/src/tx_type/contract/: auto_deleveraging.rs  contract_matching.rs  funding.rs  liquidation.rs  mod.rs  prices.rs  update_global_var.rs
utils/: Cargo.toml
utils/src/: lib.rs  serde.rs
wallet/: Cargo.toml
wallet/src/: abi.rs  error.rs  eth.rs  lib.rs  signer.rs  wallet.rs
wallet/src/abi/: L1_gateway.json  Readme.md  Zklink.json
(+36 files in other folders)
