[workspace]
resolver = "2"
members = [
    "bindings/crypto",
    "bindings/wasm",
    "crypto",
    "interface",
    "provider",
    "signer",
    "types",
    "utils"]
default-members = [
    "crypto",
    "utils",
    "types",
    "provider",
    "signer"
]

[profile.release]
opt-level = "s"
debug = true
lto = "thin"
strip = true  # Automatically strip symbols from the binary.
# The following configuration minimizes the size of the output packet, Reference https://github.com/johnthagen/min-sized-rust
# opt-level = "z"
# debug = false
# lto = true
# codegen-units = 1
