[workspace]
resolver = "2"
members = [
    "bindings/sdk",
    "bindings/wasm",
#    "examples/Rust/rust_sdk_example",
    "interface",
    "provider",
    "signer",
    "types",
    "utils",
    "wallet",
]
default-members = [
    "signer",
    "utils",
    "types",
    "provider",
#    "examples/Rust/rust_sdk_example",

]

[profile.release]
opt-level = "s"
debug = true
lto = "thin"
strip = true  # Automatically strip symbols from the binary.
# The following configuration minimizes the size of the output packet, Reference https://github.com/johnthagen/min-sized-rust
# opt-level = "z"
# debug = false
# lto = true
# codegen-units = 1
