[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch="beta"}
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
wasm-bindgen = "0.2"
ethers = { version = "2", features = ["rustls", "abigen"] }

