[package]
name = "common"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth_signer = { path = "../eth_signer" }
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch = "beta" }
hex = "0.4"
rand = "0.8"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.0"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1.0"
zklink_sdk_utils = { path = "../utils", version = "0.1.0" }

