[package]
name = "zklink_crypto"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "zklink_crypto"

[dependencies]
async-trait = "0.1"
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch = "beta" }
hex = "0.4"
jsonrpc-core = "17"
parity-crypto = { version = "0.9", features = ["publickey"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
rlp = "0.5"
secp256k1 = { version = "0.21", features = ["std", "recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
web3 = "0.18.0"
zklink_sdk_utils = { path = "../utils" }
ethers = "2.0.2"
serde_eip712 = "0.2.2"
ethers_primitives =  "0.2.2"
uniffi = { version = "0.23", optional = true }
uniffi_macros = { version = "0.23", optional = true }

[build-dependencies]
uniffi_build = {version = "0.23", features=["builtin-bindgen"]}

[features]
default = []
ffi = ["uniffi", "uniffi_macros"]


[dev-dependencies]
actix-rt = "2.7"
actix-web = "4.2"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
ethers = "2.0.2"
serde_eip712 = "0.2.2"
ethers_primitives =  "0.2.2"