[package]
name = "eth_signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.0"
hex = "0.4.2"

parity-crypto = {version = "0.9", features = ["publickey"] }
rlp = "0.5.0"

reqwest = { version = "0.11", features = ["json", "blocking"] }
thiserror = "1.0"

jsonrpc-core = "17"
async-trait = "0.1"
web3 = "0.18.0"
secp256k1 = { version = "0.21", features = ["std", "recovery"] }

zklink_sdk_utils = { path = "../utils", version = "0.1.0" }
[dev-dependencies]
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
actix-web = "4.0.0-beta.8"
futures = "0.3"
