[package]
name = "zklink_interface"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
zklink_sdk_signers = { path = "../signer" }
zklink_sdk_types = { path = "../types" }

[features]
default = ["sync"]
sync = []
ffi = []
