[package]
name = "zklink_sdk_interface"
version = "2.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
zklink_sdk_signers = { path = "../signers" }
zklink_sdk_types = { path = "../types" }

[features]
default = []
ffi = []
web = []
