[package]
name = "zklink_sdk_interface"
version = "2.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
zklink_sdk_signers = { path = "../signers" }
zklink_sdk_types = { path = "../types" }

[features]
default = []
ffi = []
web = []
