[package]
name = "zklink_sdk_provider"
version = "2.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version = "0.3.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
jsonrpsee = { version = "0.15.1", features = ["server", "client", "macros"] }
serde = "1.0.137"
zklink_sdk_signers = { path = "../signers" }
zklink_sdk_types = { path = "../types" }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
default = []
ffi = []
