[package]
name = "zklink_sdk_provider"
version = "2.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
bigdecimal = { version = "0.4.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
zklink_sdk_signers = { path = "../signers" }
zklink_sdk_types = { path = "../types" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonrpsee = { version = "0.21", features = ["client","macros", "server"] }
warp = { version = "0.3.6", features = ["multipart"] }
tokio-tungstenite = "0.21.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
jsonrpsee = { version = "0.21", features = ["macros","jsonrpsee-types","client-core"] }
getrandom = { version = "0.2.11", features = ["js"] }
uuid = "0.8"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
wasm-bindgen-test = "0.3"

[features]
default = []
ffi = []
web =[]
