[package]
name = "zklink_sdk_provider"
version = "2.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bigdecimal = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
pythnet-sdk = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
zklink_sdk_signers = { path = "../signers" }
zklink_sdk_types = { path = "../types" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonrpsee = { workspace = true, features = ["client","macros", "server"] }
tokio-tungstenite = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
jsonrpsee = { workspace = true, features = ["macros","jsonrpsee-types","client-core"] }
getrandom = { workspace = true, features = ["js"] }
uuid = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
wasm-bindgen-test = "0.3"

[features]
default = []
ffi = []
web =[]
