[package]
name = "zklink_signers"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
ethers_primitives =  "0.2.2"
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch = "beta" }
hex = "0.4"
jsonrpc-core = "17"
once_cell = "1.16"
parity-crypto = { version = "0.9", features = ["publickey"] }
primitive-types = { version = "0.10.1", features = ["serde"] }
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
rlp = "0.5"
secp256k1 = { version = "0.21", features = ["std", "recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_eip712 = "0.2.2"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
web3 = { version = "0.18.0",default-features = false, features = ["signing"]}
zklink_sdk_utils = { path = "../utils" }
wasm-bindgen = { version = "0.2.87",features = ["serde-serialize"] }

[features]
default = []
ffi = []

[dev-dependencies]
actix-rt = "2.7"
actix-web = "4.2"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
