[package]
name = "zklink_signers"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
ethers = "2.0.10"
ethers_primitives =  "0.2.2"
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch = "beta" }
hex = "0.4"
jsonrpc-core = "17"
k256 = { version = "0.13.1", features = ["ecdsa","sha256"] }
once_cell = "1.16"
primitive-types = { version = "0.12", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_eip712 = "0.2.2"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
zklink_sdk_utils = { path = "../utils" }

[features]
default = []
ffi = []

[dev-dependencies]
actix-rt = "2.7"
actix-web = "4.2"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
