[package]
name = "zklink_sdk_signers"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
ethers = "2.0.10"
ethers_primitives =  "0.2.2"
franklin_crypto = { package = "franklin-crypto", version = "0.0.5", git = "https://github.com/zkLinkProtocol/franklin-crypto.git", branch = "beta" }
hex = "0.4"
k256 = { version = "0.13.1", features = ["ecdsa","sha256"] }
primitive-types = { version = "0.12", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_eip712 = "0.2.2"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
zklink_sdk_utils = { path = "../utils" }

[features]
default = []
ffi = []

[dev-dependencies]
futures = "0.3"
