[package]
name = "zklink_sdk_signers"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
ethers = "2.0.10"
ethers_primitives =  "0.2.2"
franklin_crypto = { package = "franklin-crypto", version = "0.0.5", git = "https://github.com/zkLinkProtocol/franklin-crypto.git", branch = "beta" }
hex = "0.4"
js-sys = "0.3.64"
k256 = { version = "0.13.2", features = ["ecdsa","sha256"] }
num = { version = "0.4", features = ["serde"] }
primitive-types = { version = "0.12", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_eip712 = "0.2.2"
serde_json = "1.0"
sha2 = "0.10"
starknet-core = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "95d50ac0a3a537cb63a390bad818415899c90693" }
starknet-signers = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "95d50ac0a3a537cb63a390bad818415899c90693" }
thiserror = "1.0"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
zklink_sdk_utils = { path = "../utils" }

[features]
default = []
ffi = []
web = []

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
