[package]
name = "zklink_sdk_signers"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
ethers = { workspace = true }
ethers_primitives =  { workspace = true }
franklin-crypto = { workspace = true }
hex = { workspace = true }
js-sys = { workspace = true }
k256 = { workspace = true, features = ["ecdsa","sha256"] }
num = { workspace = true, features = ["serde"] }
primitive-types = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true}
serde_eip712 ={ workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
starknet-core = { workspace = true }
starknet-signers = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { workspace = true }
zklink_sdk_utils = { path = "../utils" }

[features]
default = []
ffi = []
web = []

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
