[package]
name = "zklink_sdk_types"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.10"
hex = "0.4"
num = { version = "0.4.0", features = ["serde"] }
serde = "1.0.137"
serde_json = "1.0.0"
thiserror = "1.0"
validator = { version = "0.15", features = ["derive"] }
zklink_sdk_signers = { path = "../signers" }
zklink_sdk_utils = { path = "../utils" }

[dev-dependencies]

[features]
default = []
#ffi = ["uniffi", "uniffi_macros"]
ffi = []
