[package]
name = "zklink_sdk_types"
version = "2.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = { workspace = true }
ethers = { workspace = true }
hex = { workspace = true }
num = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
starknet-ff = { workspace = true }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = { workspace = true }
validator = { workspace = true, features = ["derive"] }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
zklink_sdk_signers = { path = "../signers" }
zklink_sdk_utils = { path = "../utils" }

[features]
default = []
ffi = []
web = []
