[package]
name = "zklink_sdk_utils"
version = "2.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = {workspace = true}
num = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
