[package]
name = "wallet"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
num = { version = "0.4.0", features = ["serde"] }
zklink_provider = { path = "../provider" }
zklink_signers = { path = "../signer" }
zklink_types = { path = "../types" }
