[package]
name = "zklink_sdk_wallet"
version = "3.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version = "0.3.0", features = ["serde"] }
ethers = "2.0.10"
serde = "1.0.137"
serde_json = "1.0"
thiserror = "1.0"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
zklink_sdk_signers = { path = "../signers" }
zklink_sdk_types = { path = "../types" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wasm-bindgen-test = "0.3"

[features]
default = []
ffi = []
web =[]
