[package]
name = "zklink_sdk_wallet"
version = "3.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { workspace = true, features = ["serde"] }
ethers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
zklink_sdk_signers = { path = "../signers" }
zklink_sdk_types = { path = "../types" }
async-std = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wasm-bindgen-test = { workspace = true }

[features]
default = []
ffi = []
web =[]
