[package]
name = "bindings_sdk"
version = "0.1.0"
edition = "2021"

[lib]
name = "zklink_sdk"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
chrono = "0.4"
hex = "0.4"
serde_json = "1.0"
uniffi = "0.23"
zklink_sdk_signers = { path = "../../signers", default_features = false,features = ["ffi"] }
zklink_sdk_types = { path = "../../types", default_features = false, features = ["ffi"] }
zklink_interface = { path = "../../interface", default_features = false, features = ["ffi"] }
zklink_provider = { path = "../../provider", default_features = false, features = ["ffi"]}

[build-dependencies]
uniffi_build = {version = "0.23", features=["builtin-bindgen"] }
