[package]
name = "zklink_sdk_wasm"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
zklink_sdk_signers = { path = "../../signers" }
zklink_sdk_types = { path = "../../types" }
zklink_sdk_provider = { path = "../../provider" }
wasm-bindgen = { version = "0.2.87",features = ["serde-serialize"] }
serde-wasm-bindgen = "0.5"
getrandom = { version = "0.2.10", features = ["js"] }
web-sys = "0.3"
hex = "0.4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
[features]
default = []
ffi = []

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
