[package]
name = "zklink_sdk_wasm"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
getrandom = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
web-time = { workspace = true }

zklink_sdk_signers = { path = "../../signers" }
zklink_sdk_types = { path = "../../types" }
zklink_sdk_provider = { path = "../../provider" }
zklink_sdk_interface = { path = "../../interface" }
zklink_sdk_wallet = { path = "../../wallet" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
jsonrpsee = { workspace = true, features = ["macros","jsonrpsee-types","client-core"] }
wasm-bindgen-futures = { workspace = true }
uuid = { workspace = true }

[features]
default = []
ffi = []
web = ["zklink_sdk_interface/web","zklink_sdk_signers/web"]

[dev-dependencies]
wasm-bindgen-test = "0.3.39"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
