[package]
name = "rust_sdk_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


zklink_signers = {path = "../../../signer"}
zklink_wallet = { path = "../../../wallet"}
hex = "0.4.3"