[package]
name = "rust_sdk_example"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"


zklink_sdk_signers = {path = "../../../signers"}
zklink_sdk_provider = { path = "../../../provider", features = []}
hex = "0.4.3"
tokio = { version = "1.32.0", features = [] }
